# transformers-research

./: README.md  pyproject.toml
src/transformers_research/models/: attention.py  norm.py  vanilla.py
